crates/toml/tests/snapshots/invalid/string/bad-uni-esc-ml-02.stderr
TOML parse error at line 1, column 29
  |
1 | bad-uni-esc-ml-02 = """val\Ux"""
  |                             ^
too few unicode value digits, expected unicode hexadecimal value
